[tool.poetry]
name = "nixops_containers"
version = "1.0"
description = "NixOps Containers plugin"
authors = ["alanraison <alan.raison@gmail.com>"]
license = "LGPL-2.1-only"
include = [ "nixops_containers/nix/*.nix" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
typing-extensions = "^3.7.4"
nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.770"
black = "^19.10b0"
flake8 = "^3.8.2"

[tool.poetry.plugins."nixops"]
containers = "nixops_containers.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"